Safari takes too long to fetch images from memory cache https://bugs.webkit.org/show_bug.cgi?id=216048 <rdar://problem/68260952>

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/stale-while-revalidate/stale-image.html:
* web-platform-tests/html/dom/elements/images/bypass-cache-revalidation-expected.txt: Added.
* web-platform-tests/html/dom/elements/images/bypass-cache-revalidation.html: Added.
* web-platform-tests/html/dom/elements/images/image.py: Added.
(main):

Source/WebCore:

In case of image resource, we skip revalidation if the stored image is from the same document.
This is inline with https://html.spec.whatwg.org/#updating-the-image-data:list-of-available-images
which defines a list of available images for each Document.
In case fetch mode is different, we do not skip revalidation as we might otherwise bypass security checks.

Tests: http/wpt/html/dom/elements/images/bypass-cache-redirection-revalidation.html
       http/wpt/html/dom/elements/images/hover-image-change.html
       imported/w3c/web-platform-tests/html/dom/elements/images/bypass-cache-revalidation.html

* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::load):
(WebCore::CachedImage::canSkipRevalidation const):
* loader/cache/CachedImage.h:
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::determineRevalidationPolicy const):

LayoutTests:

* http/wpt/html/dom/elements/images/bypass-cache-redirection-revalidation-expected.txt: Added.
* http/wpt/html/dom/elements/images/bypass-cache-redirection-revalidation.html: Added.
* http/wpt/html/dom/elements/images/hover-image-change-expected.html: Added.
* http/wpt/html/dom/elements/images/hover-image-change.html: Added.
* http/wpt/html/dom/elements/images/redirect.py: Added.


Canonical link: https://commits.webkit.org/229068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266699 268f45cc-cd09-0410-ab3c-d52691b4dbfc